<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                        android:id="@+id/sharedrawerid"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShareActivity">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="77dp"
            app:srcCompat="@drawable/picwuli" />
        <TextView
            android:text="@string/linktovisit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_centerInParent="true" android:id="@+id/textvisit"
            />
        <TextView
            android:text="@string/linktowuli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/abouttextview"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" android:layout_marginBottom="218dp"
            />
        <TextView
            android:text="@string/linktofrequent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_centerHorizontal="true"
            android:id="@+id/frequenttextview" android:layout_alignParentBottom="true"
            android:layout_marginBottom="191dp"
            />
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_alignParentBottom="true" android:layout_marginBottom="172dp"
            android:layout_alignParentStart="true" android:visibility="visible"/>
        <TextView
            android:text="@string/linktofb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentBottom="true"
            android:layout_marginBottom="132dp" android:layout_centerHorizontal="true"
            android:id="@+id/liketextview"
            />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="58dp"
            android:layout_height="47dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="114dp"
            android:layout_toStartOf="@+id/liketextview"
            app:srcCompat="@drawable/fbpng" />

        <TextView
            android:id="@+id/textViewyou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/textvisit"
            android:layout_marginBottom="69dp"
            android:text="@string/linktoyoutube" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="80dp"
            android:layout_height="38dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="59dp"
            android:layout_toStartOf="@+id/textvisit"
            app:srcCompat="@drawable/youtube" />


    </RelativeLayout>
    <android.support.design.widget.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:menu="@menu/navigation_menu"
            android:layout_gravity = "start">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>